Fix search component on mobile.

--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -99,7 +99,7 @@
     }
 
     .input {
-        width: 200px;
+        width: 100%;
     }
     .input, .select {
         max-width: none;
